--- a/index5.html
+++ b/index5.html
@@ -21,7 +21,7 @@
 </script>
 <noscript><div><img src="https://mc.yandex.ru/watch/93782288" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
 <!-- /Yandex.Metrika counter -->
-  <title>Хомяк<<!-- Yandex.Metrika counter -->
+  <title>Хомяк<
 <script type="text/javascript" >
    (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
    m[i].l=1*new Date();
